--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.1.0"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
