--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.6.7",
     "axios": "^0.26.1",
+    "bcrypt": "^5.1.0",
     "cheerio": "^1.0.0-rc.10",
     "graphql": "^16.3.0",
     "graphql-type-json": "^0.3.2",
@@ -56,6 +57,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
